LPS-171824 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -13206,6 +13206,7 @@ reminder=مذكرات
 reminder-email=البريد الإلكتروني للتذكير
 reminder-queries=استعلامات التذكير
 reminder-query-and-answer-cannot-be-empty=استعلام التذكير والجواب لا يمكن أن يكونا فارغين.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=سؤال استعلام التذكير
 reminders=رسائل التذكير
 remote=عن بُعد
