--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -13206,6 +13206,7 @@ reminder=Напомняне
 reminder-email=Имейл за напомняне (Automatic Translation)
 reminder-queries=Заявки за напомняния
 reminder-query-and-answer-cannot-be-empty=Заявката за напомняне и отговора не могат да бъдат празни.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Въпрос за заявка за напомняне (Automatic Translation)
 reminders=Напомняния (Automatic Translation)
 remote=отдалечен (Automatic Translation)
