--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -13208,6 +13208,7 @@ reminder=Recordatori
 reminder-email=Correu electrònic de recordatori
 reminder-queries=Preguntes de recordatori
 reminder-query-and-answer-cannot-be-empty=La pregunta de recordatori i la resposta no poden ser buides.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pregunta de recordatori
 reminders=Recordatori
 remote=Remot
