--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -13206,6 +13206,7 @@ reminder=Upomínka
 reminder-email=Emailová upomínka
 reminder-queries=Ověřovací otázky
 reminder-query-and-answer-cannot-be-empty=Otázka a odpověď pro opětovné získání hesla nemohou být prázdné.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Upomínky
 remote=Remote (Automatic Copy)
