--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -13208,6 +13208,7 @@ reminder=Anzeige
 reminder-email=Erinnerungs-E-Mail
 reminder-queries=Erinnerungsfragen
 reminder-query-and-answer-cannot-be-empty=Erinnerungsfrage und -antwort können nicht leer sein.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Erinnerungsfrage
 reminders=Erinnerungen
 remote=Remote
