--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -13206,6 +13206,7 @@ reminder=Υπενθύμιση
 reminder-email=Μήνυμα ηλεκτρονικού ταχυδρομείου υπενθύμισης (Automatic Translation)
 reminder-queries=Ερωτήσεις υπενθύμισης
 reminder-query-and-answer-cannot-be-empty=Η ερώτηση και η απάντηση υπενθύμισης δεν μπορούν να είναι κενές.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Ερώτηση ερωτήματος υπενθύμισης (Automatic Translation)
 reminders=Υπενθυμίσεις (Automatic Translation)
 remote=μακρινός (Automatic Translation)
