--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -13206,6 +13206,7 @@ reminder=Meeldetuletus
 reminder-email=Meeldetuletuse e-post (Automatic Translation)
 reminder-queries=Meeldetuletuspäringud
 reminder-query-and-answer-cannot-be-empty=Meeldetuletuspäring ja vastus ei saa olle tühjad.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Meeldetuletuse päringu küsimus (Automatic Translation)
 reminders=Meeldetuletusi (Automatic Translation)
 remote=Remote (Automatic Translation)
