--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -13206,6 +13206,7 @@ reminder=Gogoan izan
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Gogoratzen diren kontsultak
 reminder-query-and-answer-cannot-be-empty=Segurtasunezko galdera eta erantzuna ezin dira hutsik egon.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
