--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -13206,6 +13206,7 @@ reminder=یادآوری‌ها
 reminder-email=ایمیل یادآوری
 reminder-queries=کوئری‌های یاد آوری
 reminder-query-and-answer-cannot-be-empty=کوئری یاد آوری و پاسخ نمی‌تواند خالی باشد.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=یاد آوری کننده سوال کوئری
 reminders=یادآوری‌ها
 remote=دور (Automatic Translation)
