--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -13205,6 +13205,7 @@ reminder=Muistutukset
 reminder-email=Muistutus-sähköposti
 reminder-queries=Muistutus kyselyt
 reminder-query-and-answer-cannot-be-empty=Muistutus kysely ja vastaus eivät voi olla tyhjiä.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Muistutus hakukysely
 reminders=Muistukset
 remote=Etä
