--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -13206,6 +13206,7 @@ reminder=Rappel
 reminder-email=Email de rappel
 reminder-queries=Questions de rappel
 reminder-query-and-answer-cannot-be-empty=La question et la réponse de rappel ne peuvent pas être vides.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Question de rappel
 reminders=Rappels
 remote=A distance
