--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -13206,6 +13206,7 @@ reminder=Recordatorio
 reminder-email=Correo electrónico de recordatorio
 reminder-queries=Preguntas recordatorio
 reminder-query-and-answer-cannot-be-empty=A pregunta recordatorio e a resposta non poden estar en blanco.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Recordatorios
 remote=Remoto
