--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -13206,6 +13206,7 @@ reminder=फिर से इंडेक्स
 reminder-email=अनुस्मारक ईमेल
 reminder-queries=अनुस्मारक (रिमाइंडर) प्रश्न
 reminder-query-and-answer-cannot-be-empty=रिमाइंडर क्वेरी और जवाब खाली नहीं हो सकता। (Automatic Translation)
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=रिमाइंडर क्वेरी प्रश्न (Automatic Translation)
 reminders=अनुस्मारक
 remote=बेमिलनसार (Automatic Translation)
