--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -13209,6 +13209,7 @@ reminder=Emlékeztető
 reminder-email=Emlékeztető e-mail
 reminder-queries=Emlékeztető kérdések
 reminder-query-and-answer-cannot-be-empty=Emlékeztető kérdés és válasz nem maradhat üresen
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Emlékeztető lekérdezési kérdés
 reminders=Emlékeztetők
 remote=Távoli
