--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -13206,6 +13206,7 @@ reminder=Peringatan
 reminder-email=Email Pengingat (Automatic Translation)
 reminder-queries=Pertanyaan Pengungat
 reminder-query-and-answer-cannot-be-empty=Pertanyaan Pengingat dan jawaban tidak boleh kosong.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pertanyaan Kueri Pengingat (Automatic Translation)
 reminders=Pengingat (Automatic Translation)
 remote=terpencil (Automatic Translation)
