--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -13207,6 +13207,7 @@ reminder=Promemoria
 reminder-email=Email di Sollecito
 reminder-queries=Domande di ricordo
 reminder-query-and-answer-cannot-be-empty=La domanda e la risposta di recupero password non possono essere vuote.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Domanda di Recupero
 reminders=Solleciti
 remote=remoto (Automatic Translation)
