--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -13206,6 +13206,7 @@ reminder=תזכירים
 reminder-email=אימייל תזכורת
 reminder-queries=שאילתות תזכורת (Automatic Translation)
 reminder-query-and-answer-cannot-be-empty=לא ניתן להשאיר את שאלת התזכורת והתשובה לה ריקות.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=שאילת שאילתה לתזכורת
 reminders=תזכורות
 remote=מרוחק (Automatic Translation)
