--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -13208,6 +13208,7 @@ reminder=リマインダ
 reminder-email=お知らせメール
 reminder-queries=検索例
 reminder-query-and-answer-cannot-be-empty=質問と答えを入力してください。
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=クエリーの質問のリマインダー
 reminders=リマインダー
 remote=リモート
