--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -13206,6 +13206,7 @@ reminder=신호
 reminder-email=알림 이메일
 reminder-queries=신호 질문
 reminder-query-and-answer-cannot-be-empty=신호 질문과 응답은 빌 수 없다.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=알림 쿼리 질문
 reminders=알림
 remote=원격
