--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -13206,6 +13206,7 @@ reminder=ຜູ້ແຈ້ງເຕືອນ
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=ຄຳສັ່ງຜູ້ແຈ້ງເຕືອນ
 reminder-query-and-answer-cannot-be-empty=ຄຳສັ່ງການແຈ້ງເຕືອນ ແລະຕອບບໍ່ສາມາດເປົ້າຫວ່າງ
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
