--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -13206,6 +13206,7 @@ reminder=Priminimas (Automatic Translation)
 reminder-email=Priminimo el. paštas (Automatic Translation)
 reminder-queries=Priminimo pažymų užklausos (Automatic Translation)
 reminder-query-and-answer-cannot-be-empty=Priminimo užklausa ir atsakymas negali būti tušti. (Automatic Translation)
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Priminimo pažymos užklausos klausimas (Automatic Translation)
 reminders=Priminimus (Automatic Translation)
 remote=Nuotolinio (Automatic Translation)
