--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -13206,6 +13206,7 @@ reminder=Peringatan (Automatic Translation)
 reminder-email=E-mel Peringatan (Automatic Translation)
 reminder-queries=Pertanyaan Peringatan (Automatic Translation)
 reminder-query-and-answer-cannot-be-empty=Pertanyaan dan jawapan peringatan tidak boleh kosong. (Automatic Translation)
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Soalan Pertanyaan Peringatan (Automatic Translation)
 reminders=Peringatan (Automatic Translation)
 remote=Jauh (Automatic Translation)
