--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -13206,6 +13206,7 @@ reminder=Påminnelse
 reminder-email=Påminnelsesepost
 reminder-queries=Påminnelsesspørmål
 reminder-query-and-answer-cannot-be-empty=Påminnelsesspørsmål og svar kan ikke være tomt.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Påminnelsesspørsmål
 reminders=Påminnelser
 remote=fjern (Automatic Translation)
