--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -13209,6 +13209,7 @@ reminder=Herinnering
 reminder-email=Herinnerings-e-mail
 reminder-queries=Herinneringsvragen
 reminder-query-and-answer-cannot-be-empty=De vraag en het antwoord van de herinnering kunnen niet leeg zijn.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Herinneringsvraag-vraag
 reminders=Herinneringen
 remote=Extern
