--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -13209,6 +13209,7 @@ reminder=Herinnering
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Herinnering
 reminder-query-and-answer-cannot-be-empty=De vraag en het antwoord van de herinnering kunnen niet leeg zijn.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
