--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -13206,6 +13206,7 @@ reminder=Przypominanie
 reminder-email=E-mail przypomnienia
 reminder-queries=Pytania przypominania
 reminder-query-and-answer-cannot-be-empty=Pytanie i odpowiedź przypominania nie może być pusta.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pytanie kwerendy przypomnienia (Automatic Translation)
 reminders=Przypominanie
 remote=Zdalnego (Automatic Translation)
