--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -13206,6 +13206,7 @@ reminder=Lembrete
 reminder-email=Email lembrete
 reminder-queries=Lembrete da Pergunta
 reminder-query-and-answer-cannot-be-empty=A pergunta e a resposta do lembrete não podem ser vazias.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pergunta do Lembrete
 reminders=Lembretes
 remote=Remoto
