--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -13208,6 +13208,7 @@ reminder=Lembrete
 reminder-email=Email lembrete
 reminder-queries=Perguntas Lembrete
 reminder-query-and-answer-cannot-be-empty=A pergunta e a resposta do lembrete não podem estar vazias.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pergunta do Lembrete
 reminders=Lembretes
 remote=remoto (Automatic Translation)
