--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -13206,6 +13206,7 @@ reminder=Atentionare
 reminder-email=E-mail memento (Automatic Translation)
 reminder-queries=Tine Minte Interogarile
 reminder-query-and-answer-cannot-be-empty=Atentionare interogare si raspuns nu pot fi goale.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Întrebare interogare memento (Automatic Translation)
 reminders=Mementouri (Automatic Translation)
 remote=îndepărtat (Automatic Translation)
