--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -13206,6 +13206,7 @@ reminder=Напоминатель
 reminder-email=Email напоминание
 reminder-queries=Вопросы для напоминания
 reminder-query-and-answer-cannot-be-empty=Вопрос о напоминании и ответ не могут быть пустыми.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Вопрос запроса напоминания (Automatic Translation)
 reminders=Напоминания
 remote=удалённый (Automatic Translation)
