--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -13206,6 +13206,7 @@ reminder=Pripomienka
 reminder-email=Pripomienkový e-mail
 reminder-queries=Overovacie otázky
 reminder-query-and-answer-cannot-be-empty=Overovacia otázka a odpoveď nemôžu byť prázdne.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Otázka pripomienky hesla
 reminders=Pripomienky
 remote=odľahlý (Automatic Translation)
