--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -13206,6 +13206,7 @@ reminder=Opomnik
 reminder-email=E-pošta opomnika (Automatic Translation)
 reminder-queries=Poizvedbe za opomnike
 reminder-query-and-answer-cannot-be-empty=Poizvedba in odgovor za opomnike ne moreta biti prazna.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Vprašanje poizvedbe za opomnik (Automatic Translation)
 reminders=Opomnike (Automatic Translation)
 remote=Oddaljeni (Automatic Translation)
