--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -13206,6 +13206,7 @@ reminder=Подсетник
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Подсетник Упити
 reminder-query-and-answer-cannot-be-empty=Подсетник упит и одговор не може бити празан.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
