--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -13206,6 +13206,7 @@ reminder=Påminnelse
 reminder-email=E-postpåminnelse
 reminder-queries=Påminnelsefrågor
 reminder-query-and-answer-cannot-be-empty=Fråga och svar för påminnelse kan inte lämnas tomma.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Fråga för påminnelsefråga
 reminders=Påminnelser
 remote=Fjärr
