--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -13206,6 +13206,7 @@ reminder=நினைவூட்டல்
 reminder-email=நினைவூட்டல் மின்னஞ்சல்
 reminder-queries=Reminder Queries (Automatic Copy)
 reminder-query-and-answer-cannot-be-empty=நினைவூட்டல் கேள்வி மற்றும் பதில் காலியாக இருக்க முடியாது.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=நினைவூட்டல் வினவல் கேள்வி
 reminders=நினைவூட்டல்கள்
 remote=Remote (Automatic Copy)
