--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -13206,6 +13206,7 @@ reminder=เตือนความจำ
 reminder-email=เตือนอีเมล
 reminder-queries=แบบสอบถามการแจ้งเตือน
 reminder-query-and-answer-cannot-be-empty=คำถามและคำตอบเตือนความจำไม่สามารถเว้นว่างได้
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=คำถามแบบสอบถามเตือนความจำ
 reminders=การแจ้งเตือน
 remote=รีโหมด
