--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -13206,6 +13206,7 @@ reminder=Hatırlatma
 reminder-email=Anımsatıcı E-postası (Automatic Translation)
 reminder-queries=Hatırlatıcı Sorgular
 reminder-query-and-answer-cannot-be-empty=Hatırlatıcı sorgu ve cevabı boş olamaz.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Anımsatıcı Sorgu Sorusu (Automatic Translation)
 reminders=Hatırlatmalar (Automatic Translation)
 remote=uzak (Automatic Translation)
