--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -13206,6 +13206,7 @@ reminder=Нагадування
 reminder-email=Електронна пошта нагадування (Automatic Translation)
 reminder-queries=Запити для нагадувань
 reminder-query-and-answer-cannot-be-empty=Запит про нагадування та відповідь не можуть бути порожніми.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Запитання запиту нагадування (Automatic Translation)
 reminders=Нагадування (Automatic Translation)
 remote=Віддаленого (Automatic Translation)
