--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -13206,6 +13206,7 @@ reminder=Nhắc nhở
 reminder-email=Email Nhắc nhở (Automatic Translation)
 reminder-queries=Câu hỏi xác nhận
 reminder-query-and-answer-cannot-be-empty=Không hỏi xác nhận không thể để rỗng.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Câu hỏi truy vấn nhắc lại
 reminders=Nhắc nhở (Automatic Translation)
 remote=xa (Automatic Translation)
