--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -13208,6 +13208,7 @@ reminder=提示
 reminder-email=提醒邮件
 reminder-queries=提示问题
 reminder-query-and-answer-cannot-be-empty=提示问题和答案不能为空。
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=查询问题提醒。
 reminders=提醒
 remote=远程
