--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -13207,6 +13207,7 @@ reminder=提示
 reminder-email=提醒電子郵件
 reminder-queries=提示詢問
 reminder-query-and-answer-cannot-be-empty=提示詢問和答覆不可能是空的。
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=提示詢問問題
 reminders=提醒
 remote=遠端
