--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -13206,6 +13206,7 @@ reminder=Reminder (Automatic Copy)
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Reminder Queries (Automatic Copy)
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty. (Automatic Copy)
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
