--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -13208,6 +13208,7 @@ reminder=Pregunta de seguridad
 reminder-email=Correo electrónico de recordatorio
 reminder-queries=Preguntas de seguridad
 reminder-query-and-answer-cannot-be-empty=La pregunta y la respuesta seguridad no pueden estar vacías.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Pregunta para recordar consulta
 reminders=Recordatorios
 remote=Remoto
