--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -13206,6 +13206,7 @@ reminder=Podsjetnik
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Podsjetnik Upiti
 reminder-query-and-answer-cannot-be-empty=Podsjetnik upit i odgovor ne može biti prazan.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
